[package]
name = "Illusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.2"
bs58 = "0.4.0"
clap = { version = "4.1.1", features = ["derive"] }
ring = "0.16.20"
ripemd = "0.1.3"
rusty-leveldb = "1.0.5"
sha2 = "0.10.6"
#crypto = { version = "0.4.0", features = ["digest"] }
